# django-1-chosen1one

./: pyproject.toml
mysite/: settings.py  urls.py
nfactorial/: urls.py  views.py
