[tool.poetry]
name = "django-1-chosen1one"
version = "0.1.0"
description = ""
authors = ["Azamat <dzhunebaev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_1_chosen1one"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
